# retrobsd

./: .gitignore  README.md  target.mk
lib/: CMakeLists.txt  Makefile
lib/libc/: CMakeLists.txt  Makefile  mips32.toolchain.cmake
lib/libcurses/: CMakeLists.txt  Makefile  mips32.toolchain.cmake
lib/libgpanel/: CMakeLists.txt  Makefile
lib/libm/: CMakeLists.txt  Makefile
lib/libreadline/: CMakeLists.txt  Makefile
lib/libtermlib/: CMakeLists.txt  Makefile  mips32.toolchain.cmake
lib/libwiznet/: CMakeLists.txt  Makefile
lib/startup/: CMakeLists.txt  Makefile  mips32.toolchain.cmake
src/: Makefile
src/cmd/: Makefile
src/cmd/adb/: Makefile
src/cmd/adc-demo/: Makefile
src/cmd/aout/: Makefile
src/cmd/ar/: Makefile
src/cmd/as/: Makefile
src/cmd/awk/: Makefile
src/cmd/basic/: Makefile
src/cmd/calendar/: Makefile
src/cmd/cc/: Makefile
src/cmd/chflags/: Makefile
src/cmd/chown/: Makefile
src/cmd/chpass/: Makefile
src/cmd/chroot/: Makefile
src/cmd/compress/: Makefile
src/cmd/cpp/: Makefile
src/cmd/cron/: Makefile
src/cmd/date2/: Makefile
src/cmd/dc/: Makefile
src/cmd/diff/: Makefile
src/cmd/disktool/: Makefile
src/cmd/emg/: Makefile
src/cmd/env/: Makefile
src/cmd/fdisk/: Makefile
src/cmd/find/: Makefile
src/cmd/fold/: Makefile
src/cmd/forth/: Makefile
src/cmd/fsck/: Makefile
src/cmd/fstat/: Makefile
src/cmd/getty/: Makefile
src/cmd/glcdtest/: Makefile
src/cmd/gtest/: Makefile
src/cmd/hostname/: Makefile
src/cmd/id/: Makefile
src/cmd/init/: Makefile
src/cmd/la/: Makefile
src/cmd/lcc/: Makefile
src/cmd/lcpp/: Makefile
src/cmd/ld/: Makefile
src/cmd/login/: Makefile
src/cmd/ls/: Makefile
src/cmd/make/: Makefile
src/cmd/man/: Makefile
src/cmd/md5/: Makefile
src/cmd/med/: Makefile
src/cmd/mkfs/: Makefile
src/cmd/mknod/: Makefile
src/cmd/mkpasswd/: Makefile
src/cmd/more/: Makefile
src/cmd/mount/: Makefile
src/cmd/msec/: Makefile
src/cmd/nm/: Makefile
src/cmd/passwd/: Makefile
src/cmd/pdc/: Makefile
src/cmd/picoc/: Makefile
src/cmd/portio/: Makefile
src/cmd/printf/: Makefile
src/cmd/pstat/: Makefile
src/cmd/pwm/: Makefile
src/cmd/ranlib/: Makefile
src/cmd/re/: Makefile
src/cmd/reboot/: Makefile
src/cmd/renice/: Makefile
src/cmd/retroforth/: Makefile
src/cmd/scm/: Makefile
src/cmd/sed/: Makefile
src/cmd/setty/: Makefile
src/cmd/sh/: Makefile
src/cmd/shutdown/: Makefile
src/cmd/sl/: Makefile
src/cmd/smallc/: Makefile
src/cmd/smlrc/: Makefile
src/cmd/smux/: Makefile
src/cmd/smux/retro/: Makefile
src/cmd/stty/: Makefile
src/cmd/sysctl/: Makefile
src/cmd/talloc/: Makefile
src/cmd/test/: Makefile
src/cmd/tip/: Makefile
src/cmd/tip/aculib/: Makefile
src/cmd/umount/: Makefile
src/cmd/uname/: Makefile
src/cmd/update/: Makefile
src/cmd/uucp/: Makefile
src/cmd/uucp/aculib/: Makefile
src/cmd/vipw/: Makefile
src/cmd/virus/: Makefile
src/cmd/wiznet/: Makefile
src/cmd/xargs/: Makefile
src/cmd/yacc/: Makefile
src/cmd/zmodem/: Makefile
src/games/: Makefile
src/games/adventure/: Makefile
src/games/atc/: Makefile
src/games/backgammon/: Makefile
src/games/battlestar/: Makefile
src/games/boggle/: Makefile
src/games/btlgammon/: Makefile
src/games/caesar/: Makefile
src/games/cribbage/: Makefile
src/games/fortune/: Makefile
src/games/hangman/: Makefile
src/games/mille/: Makefile
src/games/monop/: Makefile
src/games/pig/: Makefile
src/games/pom/: Makefile
src/games/quiz/: Makefile
src/games/robots/: Makefile
src/games/rogue/: Makefile
src/games/sail/: Makefile
src/games/snake/: Makefile
src/games/trek/: Makefile
src/libc/: Makefile
src/libc/compat/: Makefile
src/libc/inet/: Makefile
src/libc/mips/: Makefile
src/libc/mips/string/: Makefile
src/libc/mips/sys/: Makefile
src/libc/stdio/: Makefile
src/libc/stdlib/: Makefile
src/libc/string/: Makefile
src/libcurses/: Makefile
src/libgpanel/: Makefile
src/libm/: Makefile
src/libreadline/: Makefile
src/libtermlib/: Makefile
src/libtermlib/termcap/: Makefile
src/libutil/: Makefile
src/libvmf/: Makefile
src/libwiznet/: Makefile
src/man/: Makefile
src/man/man1/: Makefile
src/man/man2/: Makefile
src/man/man3/: Makefile  ecvt.3  getdisk.3
src/man/man4/: Makefile
src/man/man5/: Makefile  dtab.5  map3270.5  vgrindefs.5
src/man/man7/: Makefile
src/man/man8/: Makefile
src/share/: Makefile
src/share/zoneinfo/: Makefile
src/startup-mips/: Makefile
sys/kernel/: init_main.c
sys/pic32/: Makefile.kconf  machdep.c  startup.S
sys/pic32/baremetal/: Makefile
sys/pic32/duinomite/: Makefile
sys/pic32/duinomite-emega/: Makefile
sys/pic32/explorer16/: Makefile
sys/pic32/fubarino/: Makefile
sys/pic32/max32/: Makefile
sys/pic32/maximite/: Makefile  bootloader.ld
sys/pic32/maximite-color/: Makefile
sys/pic32/mmb-mx7/: Makefile
sys/pic32/picadillo/: Makefile
sys/pic32/pinguino-micro/: Makefile
sys/pic32/sdxl/: Makefile
sys/pic32/snadpic/: Makefile
sys/pic32/starter-kit/: Makefile
sys/pic32/ubw32/: Makefile
sys/pic32/wf32/: Makefile
tools/: CMakeLists.txt  Makefile
tools/elf2aout/: CMakeLists.txt  Makefile
tools/fsutil/: CMakeLists.txt  Makefile
tools/icache/: CMakeLists.txt  Makefile
tools/kconfig/: CMakeLists.txt  Makefile  mkmakefile.c
tools/mkrd/: CMakeLists.txt  Makefile
tools/virtualmips/: CMakeLists.txt  Makefile
